[gd_scene load_steps=3 format=3 uid="uid://cc8wf2bv188j3"]

[ext_resource type="Script" uid="uid://cecaokf1ngw8b" path="res://Scenes/Menus/main_menu.gd" id="1_38aua"]

[sub_resource type="LabelSettings" id="LabelSettings_38aua"]
font_size = 96

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38aua")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 49
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
text = "BALLS"
label_settings = SubResource("LabelSettings_38aua")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="BottomRightCorner" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ResetSaveButton" type="Button" parent="MarginContainer/BottomRightCorner"]
layout_mode = 0
offset_left = 1423.0
offset_top = 852.0
offset_right = 1583.0
offset_bottom = 883.0
text = "Reset Save (DEBUG)"
